--- a/UITestLearning/build.gradle
+++ b/UITestLearning/build.gradle
@@ -2,16 +2,28 @@ plugins {
     id 'java'
 }
 
+configurations {
+    testCompile
+}
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 group 'ru.ojladywek'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'com.codeborne:selenide:6.5.1'
 }
 
 test {
